--- a/DuffingPoincaré.ipynb
+++ b/DuffingPoincaré.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpHikbDpK6rB5q4ri3ywXd",
+      "authorship_tag": "ABX9TyP78aguogJEzghkuPAXkMki",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,11 +27,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "> Authors:\n",
+        "\n",
+        "*   Carlos Aguilar Abad\n",
+        "*   Francisco Osácar Puyoles\n",
+        "*   Paul Rosa Ruiz\n",
+        "*   José Ortega Moya"
+      ],
+      "metadata": {
+        "id": "2MzXHrT5JIkg"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "gHfqwOwtDVBA"
       },
       "source": [
+        "\n",
         "import numpy as np\n",
         "import math\n",
         "import matplotlib.pyplot as plt"
